--- a/detect_one_edge_junc.ipynb
+++ b/detect_one_edge_junc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -31,13 +31,22 @@
     "#data = pd.read_excel('./uc2_freeway/join_junc_to_links_uc2_freeways_v1.xlsx')\n",
     "#data_pos = pd.read_excel(\"./uc2_freeway/uc2_00_01_freeways_W_N_ND2_Junctions_UTM.xlsx\")\n",
     "#--- uc3\n",
-    "data = pd.read_excel('./uc3_freeway/join_junc_to_links_uc3_freeways.xlsx')\n",
-    "data_pos = pd.read_excel(\"./uc3_freeway/uc3_00_01_N_E_ND_Junctions_UTM.xlsx\")"
+    "#data = pd.read_excel('./uc3_freeway/join_junc_to_links_uc3_freeways.xlsx')\n",
+    "#data_pos = pd.read_excel(\"./uc3_freeway/uc3_00_01_N_E_ND_Junctions_UTM.xlsx\")\n",
+    "#-- uc4\n",
+    "#data = pd.read_csv('./uc5_freeway/join_junc_to_link_uc5_freeways.csv')\n",
+    "#data_pos = pd.read_excel(\"./uc5_freeway/uc5_00_01_S_W_ND_Junctions_UTM.xlsx\")\n",
+    "#-- uc2_local\n",
+    "#data = pd.read_csv('./uc2_local/join_junc_to_link_uc2_local.csv')\n",
+    "#data_pos = pd.read_excel(\"./uc2_local/uc2_02_05_locals_ND_Junctions_UTM.xlsx\")\n",
+    "#-- uc3_local\n",
+    "data = pd.read_csv('./TOTAL_FILE/join_junc_to_CA_02_05_simple_filed.csv')\n",
+    "data_pos = pd.read_excel(\"./TOTAL_FILE/CA_02_05_simple_field_ND_Junctions_UTM.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -113,33 +122,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[116, 115]\n",
-      "[119, 118]\n",
-      "[137, 136]\n",
-      "[729, 710, 728]\n",
-      "[45, 44]\n",
-      "[127, 126]\n",
-      "[982, 981]\n"
+      "[11506, 11504]\n",
+      "[6950, 6949]\n",
+      "[4343, 4335]\n",
+      "[4345, 4339]\n",
+      "[2725, 2761, 2722]\n",
+      "[4074, 4071]\n",
+      "[7501, 7581, 7500]\n",
+      "[6776, 6771]\n",
+      "[6777, 6770]\n",
+      "[11638, 11663, 11637]\n",
+      "[80, 79]\n",
+      "[2432, 2430]\n",
+      "[9773, 9764, 9768]\n",
+      "[10004, 10001]\n",
+      "[9173, 9171]\n",
+      "[10424, 10422]\n",
+      "[5819, 5816]\n",
+      "[7158, 7143]\n",
+      "[7159, 7146]\n",
+      "[8194, 8185]\n",
+      "[8195, 8186]\n",
+      "[11508, 11485, 11507]\n",
+      "[100, 99]\n",
+      "[3505, 3504]\n",
+      "[1899, 1898]\n",
+      "[3722, 3684, 3719]\n",
+      "[2058, 2050]\n",
+      "[5622, 5616, 5620]\n",
+      "[11511, 11510]\n",
+      "[4567, 4566]\n",
+      "[7559, 7554]\n",
+      "[8727, 8724]\n",
+      "[151, 150]\n",
+      "[5362, 5357]\n",
+      "[3369, 3366]\n",
+      "[6922, 6921]\n",
+      "[5852, 5850]\n",
+      "[10488, 10489, 10485]\n",
+      "[523, 562, 521]\n",
+      "[11847, 11846]\n",
+      "[11849, 11848]\n",
+      "[954, 955, 953]\n",
+      "[11762, 11716, 11758]\n",
+      "[11498, 11503, 11496]\n",
+      "[11326, 11324]\n",
+      "[11327, 11325]\n",
+      "[4413, 4252, 4408]\n",
+      "[9049, 9028]\n",
+      "[550, 549]\n",
+      "[11528, 11517]\n",
+      "[9200, 9058, 9191]\n",
+      "[6983, 6982]\n",
+      "[2073, 2141, 2068]\n",
+      "[9706, 9728, 9703]\n",
+      "[3380, 3379]\n",
+      "[5881, 5864, 5876]\n",
+      "[1010, 1009]\n",
+      "[10404, 10403]\n",
+      "[4926, 4951, 4925]\n",
+      "[9685, 9684]\n",
+      "[66, 65]\n",
+      "[10562, 10590, 10560]\n",
+      "[2414, 2413]\n",
+      "[11557, 11556]\n",
+      "[11823, 11824, 11822]\n",
+      "[6659, 6658]\n",
+      "[1931, 1929]\n",
+      "[11453, 11452]\n",
+      "[1765, 1763]\n",
+      "[2235, 2231]\n",
+      "[4410, 4657, 4408]\n",
+      "[8660, 8659]\n",
+      "[8001, 7996]\n",
+      "[9195, 9189]\n",
+      "[8319, 8303, 8311]\n",
+      "[3722, 3733, 3719]\n",
+      "[74, 73]\n",
+      "[9340, 9339]\n",
+      "[8973, 8972]\n",
+      "[11164, 11163]\n",
+      "[11166, 11165]\n",
+      "[1086, 1085]\n",
+      "[6675, 6672]\n",
+      "[10540, 10539]\n",
+      "[2968, 2966, 2965]\n",
+      "[3344, 3353, 3342]\n",
+      "[8865, 8861]\n",
+      "[9010, 9006]\n",
+      "[3657, 3651, 3656]\n",
+      "[3668, 3670, 3667]\n",
+      "[10977, 10970]\n",
+      "[4662, 4660]\n",
+      "[9409, 9393]\n",
+      "[11574, 11573]\n",
+      "[3587, 3584]\n",
+      "[1423, 1417]\n",
+      "[11406, 11405]\n",
+      "[11409, 11408]\n",
+      "[2171, 1983, 2170]\n",
+      "[6253, 6251, 6244]\n",
+      "[11688, 11659, 11687]\n",
+      "[4840, 4776, 4837]\n",
+      "[2266, 2375, 2261]\n",
+      "[3844, 3841]\n",
+      "[3847, 3843]\n",
+      "[3867, 3856]\n",
+      "[10581, 10580]\n",
+      "[10583, 10582]\n",
+      "[6372, 6371]\n",
+      "[6414, 6410]\n",
+      "[11246, 11247, 11245]\n",
+      "[3345, 3348, 3340]\n",
+      "[7908, 7906, 7904]\n",
+      "[4620, 4615]\n",
+      "[6506, 6502]\n",
+      "[5809, 5808, 5798]\n",
+      "[11886, 11879]\n",
+      "[7802, 7796, 7794]\n",
+      "[4413, 4415, 4408]\n",
+      "[11398, 11401, 11395]\n",
+      "[6000, 5999]\n",
+      "[2703, 2702]\n",
+      "[10865, 10864]\n",
+      "[2174, 1962, 2173]\n",
+      "[6107, 6103]\n",
+      "[11070, 11065]\n",
+      "[6768, 6764]\n",
+      "[823, 821]\n",
+      "[7965, 7964]\n",
+      "[3359, 3358]\n",
+      "[3361, 3360]\n",
+      "[4355, 4352]\n",
+      "[3866, 3854]\n",
+      "[1393, 1407, 1392]\n",
+      "[8262, 8261]\n",
+      "[9283, 9279]\n",
+      "[9293, 9291]\n",
+      "[9298, 9297]\n",
+      "[7053, 7086, 7052]\n",
+      "[62, 61]\n",
+      "[8936, 8722, 8935]\n",
+      "[4988, 4986]\n",
+      "[4994, 4993]\n",
+      "[10909, 10908]\n",
+      "[11295, 11259, 11294]\n",
+      "[5438, 5431]\n",
+      "[4966, 4973, 4965]\n",
+      "[11572, 11580, 11571]\n",
+      "[7317, 7360, 7315]\n",
+      "[9200, 9208, 9191]\n",
+      "[9524, 9521]\n",
+      "[10378, 10368, 10376]\n",
+      "[110, 107]\n",
+      "[11383, 11382]\n",
+      "[11156, 11157, 11155]\n",
+      "[6105, 6101]\n",
+      "[8525, 8495, 8511]\n",
+      "[10291, 10290]\n",
+      "[1072, 1205, 1070]\n",
+      "[4635, 4656, 4634]\n",
+      "[9411, 9403]\n",
+      "[8667, 8630, 8666]\n",
+      "[24, 71, 23]\n",
+      "[3585, 3582]\n",
+      "[4411, 4359, 4402]\n",
+      "[1864, 1669, 1862]\n",
+      "[3815, 3812]\n",
+      "[1361, 1372, 1360]\n",
+      "[10827, 10824]\n",
+      "[11495, 11494]\n",
+      "[131, 130]\n",
+      "[3036, 3042, 3035]\n",
+      "[672, 668, 669]\n",
+      "[5413, 5407]\n",
+      "[58, 57]\n",
+      "[8584, 8583]\n",
+      "[8588, 8587]\n",
+      "[2248, 2246]\n",
+      "[1213, 1209]\n",
+      "[9871, 9868]\n",
+      "[7982, 7978]\n",
+      "[8782, 8777]\n",
+      "[8933, 8927]\n",
+      "[1097, 1065, 1093]\n",
+      "[1302, 1300]\n",
+      "[9765, 9694, 9763]\n",
+      "[10431, 10430]\n",
+      "[3633, 3632]\n",
+      "[7326, 7334, 7323]\n",
+      "[1971, 1969]\n",
+      "[1380, 1378]\n",
+      "[755, 736, 754]\n",
+      "[10627, 10624]\n",
+      "[10628, 10625]\n",
+      "[10632, 10629, 10626]\n",
+      "[2468, 2466]\n",
+      "[3750, 3749]\n",
+      "[1379, 1386, 1376]\n",
+      "[8762, 8757]\n",
+      "[8773, 8763]\n",
+      "[11927, 11924]\n",
+      "[2210, 2196, 2203]\n",
+      "[3390, 3389]\n",
+      "[9378, 9371]\n",
+      "[9866, 9865]\n",
+      "[7431, 7424]\n",
+      "[7432, 7422]\n",
+      "[9426, 9424]\n",
+      "[102, 101]\n",
+      "[11471, 11462]\n",
+      "[867, 870, 865]\n",
+      "[11674, 11671, 11670]\n",
+      "[9329, 9325]\n",
+      "[9330, 9327]\n",
+      "[3687, 3685]\n",
+      "[9805, 9789, 9803]\n",
+      "[9905, 9899, 9900]\n",
+      "[8469, 8459]\n",
+      "[1245, 1246, 1243]\n",
+      "[1239, 1214, 1238]\n",
+      "[6415, 6409]\n",
+      "[6416, 6411]\n",
+      "[11583, 11582]\n",
+      "[540, 598, 539]\n",
+      "[8914, 8911, 8912]\n",
+      "[10420, 10418, 10417]\n",
+      "[396, 408, 395]\n",
+      "[192, 191]\n",
+      "[1914, 1909]\n",
+      "[11589, 11587]\n",
+      "[6110, 6106]\n",
+      "[8902, 8900]\n",
+      "[8150, 8149]\n",
+      "[2735, 2731]\n",
+      "[612, 611]\n",
+      "[10810, 10809]\n",
+      "[8681, 8197, 8679]\n",
+      "[1906, 1903]\n",
+      "[1029, 1032, 1025]\n",
+      "[7509, 7566, 7507]\n",
+      "[21, 20]\n",
+      "[1263, 1262]\n",
+      "[974, 973]\n",
+      "[5381, 5379]\n",
+      "[5385, 5383]\n",
+      "[2127, 2105, 2121]\n",
+      "[8984, 8983]\n",
+      "[475, 474]\n",
+      "[2499, 2496, 2497]\n",
+      "[10244, 10256, 10240]\n",
+      "[4406, 4398]\n",
+      "[2895, 2898, 2894]\n",
+      "[9186, 9185]\n",
+      "[5193, 5180]\n",
+      "[9168, 9166, 9161]\n",
+      "[3165, 3206, 3164]\n",
+      "[6678, 6715, 6671]\n",
+      "[3461, 3459]\n",
+      "[10562, 10558, 10560]\n",
+      "[9583, 9584, 9579]\n",
+      "[899, 993, 898]\n",
+      "[2098, 2045, 2089]\n",
+      "[961, 960]\n",
+      "[6317, 6314]\n",
+      "[8908, 8907]\n",
+      "[3978, 3975, 3977]\n",
+      "[8914, 8964, 8912]\n",
+      "[8976, 8975]\n",
+      "[2607, 2606]\n",
+      "[8331, 8313, 8330]\n",
+      "[50, 59, 47]\n",
+      "[19, 16]\n",
+      "[5698, 5699, 5695]\n",
+      "[1927, 1925]\n",
+      "[11502, 11501]\n",
+      "[9402, 9385]\n",
+      "[7841, 7786, 7832]\n",
+      "[8443, 8440]\n",
+      "[2832, 2834, 2831]\n",
+      "[2147, 2143]\n",
+      "[11056, 11055]\n",
+      "[3799, 3814, 3797]\n",
+      "[70, 69]\n",
+      "[8831, 8830]\n",
+      "[3827, 3821, 3818]\n",
+      "[7765, 7755]\n",
+      "[3678, 3675]\n",
+      "[2148, 2147]\n",
+      "[1039, 991, 1037]\n",
+      "[10760, 10764, 10755]\n",
+      "[6951, 6941]\n",
+      "[6317, 6420, 6314]\n",
+      "[8670, 8669, 8665]\n",
+      "[10878, 10971, 10877]\n",
+      "[1084, 1081]\n",
+      "[2162, 2157]\n",
+      "[175, 173]\n",
+      "[4805, 4801]\n",
+      "[11293, 11292]\n",
+      "[10325, 10323]\n",
+      "[2391, 2379]\n",
+      "[9384, 9377]\n",
+      "[8749, 8746]\n",
+      "[11373, 11370]\n",
+      "[11374, 11371]\n",
+      "[10465, 10462]\n",
+      "[106, 105]\n",
+      "[1227, 1226]\n",
+      "[9332, 9423, 9331]\n",
+      "[9827, 9836, 9825]\n",
+      "[7708, 7703]\n",
+      "[5082, 5079]\n",
+      "[11743, 11738]\n",
+      "[7927, 7913, 7925]\n",
+      "[104, 103]\n",
+      "[6711, 6695]\n",
+      "[5758, 5757]\n",
+      "[5761, 5760]\n",
+      "[6677, 6674]\n",
+      "[8462, 8483, 8461]\n",
+      "[682, 681, 679]\n",
+      "[699, 696, 698]\n",
+      "[9732, 9738, 9731]\n",
+      "[6468, 6465, 6462]\n",
+      "[617, 615]\n",
+      "[8525, 8511]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfor element in Deleted_edge:\\n    print (\"or \"LinkID\" = \",element)\\nprint (len(Deleted_edge))\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,27 +504,20 @@
     "            else:\n",
     "                mid = int(len(path)/2)+1\n",
     "            for i in range(1,len(path[:mid])):\n",
-    "                Deleted_edge.append(street_id[(min(path[i],path[i-1]),max(path[i],path[i-1]))])\n",
-    "'''\n",
-    "for element in Deleted_edge:\n",
-    "    print (\"or \\\"LinkID\\\" = \",element)\n",
-    "print (len(Deleted_edge))\n",
-    "'''"
+    "                Deleted_edge.append(street_id[(min(path[i],path[i-1]),max(path[i],path[i-1]))])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df2 = pd.DataFrame(Deleted_edge, columns=[\"LinkID\"])\n",
     "#df2.to_csv('uc6_delete_v2.csv', index=False)\n",
     "#df1 = pd.read_excel(\"delete_v1.csv\")\n",
     "#df1.to_csv('uc6_delete_v3.csv', index=False)\n",
-    "df2.to_csv('delete_uc3.csv', index=False,header=False, mode='a+')"
+    "df2.to_csv('./TOTAL_FILE/delete_local.csv', index=False,header=False, mode='a+')"
    ]
   },
   {
@@ -219,6 +528,17 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +553,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
